<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_grey"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/my_logo"
        android:layout_margin="50dp"
        android:tint="@color/grey"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="15dp"
                android:paddingHorizontal="10dp"
                android:textColor="@color/black"
                android:text="@string/rule1"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="15dp"
                android:paddingHorizontal="10dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"
                android:text="@string/rule2"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="15dp"
                android:paddingHorizontal="10dp"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"
                android:text="@string/rule3"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="15dp"
                android:paddingHorizontal="10dp"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"
                android:text="@string/rule4"
                android:textSize="20sp"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>