<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <Button
            android:id="@+id/cancel_instruct_btn"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:text="@string/we_know_rules"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:textAllCaps="false"
            android:textSize="15dp"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/ok_btn"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:text="@string/ok"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:textSize="17dp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:id="@+id/info_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/info"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/instructions_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/info_icon"
            android:text="@string/rule2"
            android:layout_margin="30dp"
            android:textSize="20dp"
            android:layout_alignParentBottom="true"/>
    </LinearLayout>


</RelativeLayout>