<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/main_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_timer_black_24dp"
            android:tint="@color/orange"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4">
            <TextView
                android:id="@+id/textNumOfWords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/numberOfWords"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="25dp"/>
            <TextView
                android:id="@+id/intNumOfWords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="60"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:layout_margin="15dp"/>
            <TextView
                android:id="@+id/textForVictory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textNumOfWords"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="15dp"
                android:text="@string/forVictory"/>
            <SeekBar
                android:id="@+id/seekBarNumOfWords"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textForVictory"
                android:thumb="@drawable/sand_timer"
                android:layout_centerInParent="true"
                android:progress="60"
                android:min="10"
                android:max="200"/>
        </RelativeLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/number_words_icon"
            android:tint="@color/orange"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_marginBottom="20dp">
            <TextView
                android:id="@+id/textRoundTime"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/roundTime"
                android:textSize="25dp"/>
            <TextView
                android:id="@+id/intRoundTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="15dp"
                android:text="60"
                android:textColor="@color/black"
                android:textSize="30dp"/>
            <TextView
                android:id="@+id/textdurationInSeconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textRoundTime"
                android:layout_marginStart="15dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/durationInSeconds"/>
            <SeekBar
                android:id="@+id/seekBarRoundTime"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textdurationInSeconds"
                android:layout_centerInParent="true"
                android:thumb="@drawable/sand_timer"
                android:min="10"
                android:max="120"
                android:progress="60"/>
        </RelativeLayout>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">
        <TextView
            android:id="@+id/commonFinalWord"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:text="@string/commonFinalWord"
            android:textStyle="bold"
            android:textSize="25dp"/>
        <CheckBox
            android:id="@+id/commonWordCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/commonFinalWord"
            android:layout_marginStart="15dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/subCommonFinalWord"/>
    </RelativeLayout>
</LinearLayout>